hero sec created

--- a/index.html
+++ b/index.html
@@ -15,21 +15,55 @@
 </head>
 
 <body>
-    <nav class="c-navbar d-flex justify-content-between px-5 align-items-center">
-        <p>Join 1000+ families on the journey of healthy & Eco-friendly lifestyle</p>
-        <div class=" d-flex gap-5"><button class="btn c-btn-primary">Get Direction</button><button
-                class="btn c-btn-seccond">Download App</button></div>
+    <nav class="c-navbar sticky-top d-flex">
+        <div class="container text-dark justify-content-between my-auto d-flex">
+            <span class="c-fs-4 c-f-b-b">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle</span>
+            <div class=" d-flex gap-3"><button class="btn c-btn-primary">Get Direction</button>
+                <button class="btn c-btn-seccond">Download App</button></div>
+
+        </div>
+            <!-- <p>Join 1000+ families on the journey of healthy & Eco-friendly lifestyle</p>
+            <div class=" d-flex gap-5"><button class="btn c-btn-primary">Get Direction</button>
+                <button class="btn c-btn-seccond">Download App</button></div> -->
+
     </nav>
     <div class="container my-3">
         <div class="d-flex w-100">
-            <img class="mx-auto " src="/img/halfkg-logo.svg" alt="halfkg-logo-logo">
+            <img class="mx-auto " src="./img/halfkg-logo.svg" alt="halfkg-logo-logo">
         </div>
 
+        <div class="d-flex mt-4">
 
-        <div class="col-7 d-flex flex-column-gap-3">
-            <div class="col-12 c-text-col-one">
-                <span>BEST</span><SPAN>AT BEST PRICE</SPAN>
+            <div class="col-7 d-flex flex-column gap-3">
+                <div class="col-12 c-fs-4 c-f-b c-text-col-one">
+                    <span>BEST</span><SPAN> AT BEST PRICE</SPAN>
+                </div>
+                <h1 class="col-12 c-fs-1 c-text-col-one c-f-h mt-4">Give the premium fuel to your body, for extra
+                    mileage. </h1>
+                <p class="c-fs-3 mt-5">By with expert research,<br>not with impulse.</p>
+                <div class="d-flex gap-3 mt-5">
+                    <div class="bg-white c-fs-1 px-4 py-1 rounded  d-flex">
+                        <img class="app-store-logo " src="/img/playstore-logo.svg">
+                        <div flex-column class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
+                            <p class="c-fs-4 c-f-b">Get it on </p>
+                            <p class="c-fs-3 c-f-b-b">Google Play</p>
+
+                        </div>
+                    </div>
+                    <div class="bg-white c-fs-1 px-4 py-1 rounded  d-flex">
+                        <img class="app-store-logo " src="/img/appstore-ico.svg">
+                        <div flex-column class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
+                            <p class="c-fs-4 c-f-b">Download on the</p>
+                            <p class="c-fs-3 c-f-b-b">App Play</p>
+
+                        </div>
+                    </div>
+                </div>
             </div>
+            <div class="d-flex ms-auto">
+                <img src="/img/qr-code.svg" alt="harf kg">
+            </div>
+
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
