--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
             <span class="c-fs-4 c-f-b-b">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle</span>
             <div class=" d-flex gap-3"><button class="btn c-btn-primary">Get Direction</button>
                 <button class="btn c-btn-seccond">Download App</button></div>
-
-        </div>
-            <!-- <p>Join 1000+ families on the journey of healthy & Eco-friendly lifestyle</p>
-            <div class=" d-flex gap-5"><button class="btn c-btn-primary">Get Direction</button>
-                <button class="btn c-btn-seccond">Download App</button></div> -->
-
+            </div>
     </nav>
     <div class="container my-3">
         <div class="d-flex w-100">
@@ -55,17 +50,20 @@
                         <div flex-column class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
                             <p class="c-fs-4 c-f-b">Download on the</p>
                             <p class="c-fs-3 c-f-b-b">App Play</p>
-
                         </div>
                     </div>
+                </div>
+                <div class="w-100 d-flex mt-3">
+                    <snap class="c-f-h c-fs-2">Explore Our Curations</snap>
+                    <img class="col-4" src="/img/arrow-img.png">
                 </div>
             </div>
             <div class="d-flex ms-auto">
                 <img src="/img/qr-code.svg" alt="harf kg">
             </div>
-
         </div>
     </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
