--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="c-navbar sticky-top d-flex">
         <div class="container text-dark justify-content-between my-auto d-flex">
-            <span class="c-fs-4 c-f-b-b">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle</span>
+            <p class=" l-h-1r c-fs-4 c-f-b-b">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle</p>
             <div class=" d-flex gap-3"><button class="btn c-btn-primary">Get Direction</button>
                 <button class="btn c-btn-seccond">Download App</button></div>
             </div>
@@ -29,7 +29,7 @@
 
         <div class="d-flex mt-4">
 
-            <div class="col-7 d-flex flex-column gap-3">
+            <div class="col-12 col-md-7 d-flex flex-column gap-3">
                 <div class="col-12 c-fs-4 c-f-b c-text-col-one">
                     <span>BEST</span><SPAN> AT BEST PRICE</SPAN>
                 </div>
@@ -58,7 +58,7 @@
                     <img class="col-4" src="/img/arrow-img.png">
                 </div>
             </div>
-            <div class="d-flex ms-auto">
+            <div class="d-none d-md-flex  ms-auto">
                 <img src="/img/qr-code.svg" alt="harf kg">
             </div>
         </div>
