image bug on github

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p class="c-fs-3 mt-5">By with expert research,<br>not with impulse.</p>
                 <div class="d-flex gap-3 mt-5">
                     <div class="bg-white c-fs-1 px-4 py-1 rounded  d-flex">
-                        <img class="app-store-logo " src="/img/playstore-logo.svg">
+                        <img class="app-store-logo " src="./img/playstore-logo.svg">
                         <div flex-column class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
                             <p class="c-fs-4 c-f-b">Get it on </p>
                             <p class="c-fs-3 c-f-b-b">Google Play</p>
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <div class="bg-white c-fs-1 px-4 py-1 rounded  d-flex">
-                        <img class="app-store-logo " src="/img/appstore-ico.svg">
+                        <img class="app-store-logo " src="./img/appstore-ico.svg">
                         <div flex-column class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
                             <p class="c-fs-4 c-f-b">Download on the</p>
                             <p class="c-fs-3 c-f-b-b">App Play</p>
@@ -55,11 +55,11 @@
                 </div>
                 <div class="w-100 d-flex mt-3">
                     <snap class="c-f-h c-fs-2">Explore Our Curations</snap>
-                    <img class="col-4" src="/img/arrow-img.png">
+                    <img class="col-4" src="./img/arrow-img.png">
                 </div>
             </div>
             <div class="d-none d-md-flex  ms-auto">
-                <img src="/img/qr-code.svg" alt="harf kg">
+                <img src="./img/qr-code.svg" alt="harf kg">
             </div>
         </div>
     </div>
