--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 <body>
     <nav class="c-navbar sticky-top d-flex">
         <div class="container text-dark justify-content-between my-auto d-flex">
-            <p class=" l-h-1r c-fs-4 c-f-b-b">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle</p>
-            <div class=" d-flex gap-3"><button class="btn c-btn-primary">Get Direction</button>
-                <button class="btn c-btn-seccond">Download App</button></div>
+            <p class=" l-h-1r c-fs-4 c-f-b-b d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle</p>
+            <div class=" d-flex gap-3 col-12 col-md-5 col-lg-4 col-xl-3 justify-content-center justify-content-md-end">
+                <button class="btn btn-sm c-btn-primary">Get Direction</button>
+                <button class="btn btn-sm c-btn-seccond">Download App</button></div>
             </div>
     </nav>
     <div class="container my-3">
@@ -29,15 +30,15 @@
 
         <div class="d-flex mt-4">
 
-            <div class="col-12 col-md-7 d-flex flex-column gap-3">
+            <div class="col-12 col-lg-7 d-flex flex-column gap-3">
                 <div class="col-12 c-fs-4 c-f-b c-text-col-one">
                     <span>BEST</span><SPAN> AT BEST PRICE</SPAN>
                 </div>
                 <h1 class="col-12 c-fs-1 c-text-col-one c-f-h mt-4">Give the premium fuel to your body, for extra
                     mileage. </h1>
-                <p class="c-fs-3 mt-5">By with expert research,<br>not with impulse.</p>
-                <div class="d-flex gap-3 mt-5">
-                    <div class="bg-white c-fs-1 px-4 py-1 rounded  d-flex">
+                <p class="c-fs-3 mt-3 mt-md-5">By with expert research,<br>not with impulse.</p>
+                <div class="d-flex justify-content-center justify-content-sm-start gap-3 gap-md-4  mt-2 mt-md-4">
+                    <div class="bg-white c-fs-1 px-3 px-md-3 py-2 rounded  d-flex">
                         <img class="app-store-logo " src="./img/playstore-logo.svg">
                         <div flex-column class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
                             <p class="c-fs-4 c-f-b">Get it on </p>
@@ -45,20 +46,20 @@
 
                         </div>
                     </div>
-                    <div class="bg-white c-fs-1 px-4 py-1 rounded  d-flex">
+                    <div class="bg-white c-fs-1 px-3 px-md-3 py-2 rounded  d-flex">
                         <img class="app-store-logo " src="./img/appstore-ico.svg">
                         <div flex-column class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
                             <p class="c-fs-4 c-f-b">Download on the</p>
-                            <p class="c-fs-3 c-f-b-b">App Play</p>
+                            <p class="c-fs-3 c-f-b-b">App Store</p>
                         </div>
                     </div>
                 </div>
-                <div class="w-100 d-flex mt-3">
+                <div class="w-100 d-flex mt-2 mt-md-3">
                     <snap class="c-f-h c-fs-2">Explore Our Curations</snap>
-                    <img class="col-4" src="./img/arrow-img.png">
+                    <img class="col-4 d-none d-md-block" src="./img/arrow-img.png">
                 </div>
             </div>
-            <div class="d-none d-md-flex  ms-auto">
+            <div class="d-none d-lg-flex  ms-auto">
                 <img src="./img/qr-code.svg" alt="harf kg">
             </div>
         </div>
