--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>HalfKg</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-</head>
+<link rel="icon" type="image/x-icon" href="./img/fav.svg">
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="reset.css">
 
