res mod & emoji added

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <body>
     <nav class="c-navbar sticky-top d-flex">
-        <div class="container text-dark justify-content-between my-auto d-flex">
-            <p class=" l-h-1r c-fs-4 c-f-b-b d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle</p>
+        <div class="container align-items-center text-dark justify-content-between my-auto d-flex">
+            <p class=" c-fs-4  d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle</p>
             <div class=" d-flex gap-3 col-12 col-md-5 col-lg-4 col-xl-3 justify-content-center justify-content-md-end">
                 <button class="btn btn-sm c-btn-primary">Get Direction</button>
                 <button class="btn btn-sm c-btn-seccond">Download App</button></div>
@@ -32,25 +32,30 @@
 
             <div class="col-12 col-lg-7 d-flex flex-column gap-3">
                 <div class="col-12 c-fs-4 c-f-b c-text-col-one">
-                    <span>BEST</span><SPAN> AT BEST PRICE</SPAN>
+                    <span>BEST</span>
+                    <span><img class="text-emoji" src="/img/grass.svg"></span>
+                    <span><img class="text-emoji" src="/img/salad.svg"></span>
+                    <SPAN> AND LOWEST</SPAN>
+                    <span><img class="text-emoji" src="/img/money.svg"></span>
+                    <span><img class="text-emoji" src="/img/happy.svg"></span>
                 </div>
-                <h1 class="col-12 c-fs-1 c-text-col-one c-f-h mt-4">Give the premium fuel to your body, for extra
+                <h1 class="col-12 c-fs-1 c-text-col-one c-f-h mt-1">Give the premium fuel to your body, for extra
                     mileage. </h1>
-                <p class="c-fs-3 mt-3 mt-md-5">By with expert research,<br>not with impulse.</p>
-                <div class="d-flex justify-content-center justify-content-sm-start gap-3 gap-md-4  mt-2 mt-md-4">
-                    <div class="bg-white c-fs-1 px-3 px-md-3 py-2 rounded  d-flex">
+                <p class="c-fs-3 mt-2 mt-md-5">Buy with expert research,<br>not with impulse.</p>
+                <div class="d-flex justify-content-center justify-content-sm-start gap-3 gap-md-4  mt-1 mt-md-3">
+                    <div class="bg-white app-store-btn c-fs-1 px-3 px-md-3 py-2 rounded  d-flex">
                         <img class="app-store-logo " src="./img/playstore-logo.svg">
                         <div flex-column class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
-                            <p class="c-fs-4 c-f-b">Get it on </p>
-                            <p class="c-fs-3 c-f-b-b">Google Play</p>
+                            <p class="c-fs-5 c-f-b text-uppercase ">Get it on </p>
+                            <p class="c-fs-4 c-f-b-b ">Google Play</p>
 
                         </div>
                     </div>
-                    <div class="bg-white c-fs-1 px-3 px-md-3 py-2 rounded  d-flex">
+                    <div class="bg-white app-store-btn c-fs-1 px-3 px-md-3 py-2 rounded  d-flex">
                         <img class="app-store-logo " src="./img/appstore-ico.svg">
                         <div flex-column class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
-                            <p class="c-fs-4 c-f-b">Download on the</p>
-                            <p class="c-fs-3 c-f-b-b">App Store</p>
+                            <p class="c-fs-5 c-f-b text-uppercase">Download on the</p>
+                            <p class="c-fs-4 c-f-b-b">App Store</p>
                         </div>
                     </div>
                 </div>
