emoji bug fixed

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <div class="col-12 col-lg-7 d-flex flex-column gap-3">
                 <div class="col-12 c-fs-4 c-f-b c-text-col-one">
                     <span>BEST</span>
-                    <span><img class="text-emoji" src="/img/grass.svg"></span>
-                    <span><img class="text-emoji" src="/img/salad.svg"></span>
+                    <span><img class="text-emoji" src="./img/grass.svg"></span>
+                    <span><img class="text-emoji" src="./img/salad.svg"></span>
                     <SPAN> AND LOWEST</SPAN>
-                    <span><img class="text-emoji" src="/img/money.svg"></span>
-                    <span><img class="text-emoji" src="/img/happy.svg"></span>
+                    <span><img class="text-emoji" src="./img/money.svg"></span>
+                    <span><img class="text-emoji" src="./img/happy.svg"></span>
                 </div>
                 <h1 class="col-12 c-fs-1 c-text-col-one c-f-h mt-1">Give the premium fuel to your body, for extra
                     mileage. </h1>
