--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="container align-items-center text-dark justify-content-between my-auto d-flex">
             <p class=" c-fs-4  d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle</p>
             <div class=" d-flex gap-3 col-12 col-md-5 col-lg-4 col-xl-3 justify-content-center justify-content-md-end">
-                <button class="btn btn-sm c-btn-primary">Get Direction</button>
-                <button class="btn btn-sm c-btn-seccond">Download App</button></div>
+                <button class="btn btn-sm px-2 px-md-3 py-1 py-md-2 c-btn-primary">Get Direction</button>
+                <button class="btn btn-sm px-2 px-md-3 py-1 py-md-2 c-btn-seccond">Download App</button></div>
             </div>
     </nav>
     <div class="container my-3">
