--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <title>HalfKg</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-<link rel="icon" type="image/x-icon" href="./img/fav.svg">
-<link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="reset.css">
+    <link rel="icon" type="image/x-icon" href="./img/fav.svg">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="reset.css">
 
 </head>
 
 <body>
     <nav class="c-navbar sticky-top d-flex">
         <div class="container align-items-center text-dark justify-content-between my-auto d-flex">
-            <p class=" c-fs-4  d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle</p>
+            <p class=" c-fs-4  d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle
+            </p>
             <div class=" d-flex gap-3 col-12 col-md-5 col-lg-4 col-xl-3 justify-content-center justify-content-md-end">
                 <button class="btn btn-sm px-2 px-md-3 py-1 py-md-2 c-btn-primary">Get Direction</button>
-                <button class="btn btn-sm px-2 px-md-3 py-1 py-md-2 c-btn-seccond">Download App</button></div>
+                <button class="btn btn-sm px-2 px-md-3 py-1 py-md-2 c-btn-seccond">Download App</button>
             </div>
+        </div>
     </nav>
     <div class="container my-3">
         <div class="d-flex w-100">
@@ -43,21 +45,28 @@
                     mileage. </h1>
                 <p class="c-fs-3 mt-2 mt-md-5">Buy with expert research,<br>not with impulse.</p>
                 <div class="d-flex justify-content-center justify-content-sm-start gap-3 gap-md-4  mt-1 mt-md-3">
-                    <div class="bg-white app-store-btn c-fs-1 px-3 px-md-3 py-2 rounded  d-flex">
-                        <img class="app-store-logo " src="./img/playstore-logo.svg">
-                        <div flex-column class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
-                            <p class="c-fs-5 c-f-b text-uppercase ">Get it on </p>
-                            <p class="c-fs-4 c-f-b-b ">Google Play</p>
+                    <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg" class="app-store-btn">
+                        <div class="bg-white w-100  c-fs-1 px-3 px-md-3 py-2 rounded  d-flex">
+                            <img class="app-store-logo " src="./img/playstore-logo.svg">
+                            <div flex-column
+                                class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
+                                <p class="c-fs-5 c-f-b text-uppercase ">Get it on </p>
+                                <p class="c-fs-4 c-f-b-b ">Google Play</p>
 
+                            </div>
                         </div>
-                    </div>
-                    <div class="bg-white app-store-btn c-fs-1 px-3 px-md-3 py-2 rounded  d-flex">
-                        <img class="app-store-logo " src="./img/appstore-ico.svg">
-                        <div flex-column class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
-                            <p class="c-fs-5 c-f-b text-uppercase">Download on the</p>
-                            <p class="c-fs-4 c-f-b-b">App Store</p>
-                        </div>
-                    </div>
+                    </a>
+                            <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg"
+                                class="app-store-btn">
+                                <div class="bg-white w-100 c-fs-1 px-3 px-md-3 py-2 rounded  d-flex">
+                                    <img class="app-store-logo " src="./img/appstore-ico.svg">
+                                    <div flex-column
+                                        class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
+                                        <p class="c-fs-5 c-f-b text-uppercase">Download on the</p>
+                                        <p class="c-fs-4 c-f-b-b">App Store</p>
+                                    </div>
+                                </div>
+                            </a>
                 </div>
                 <div class="w-100 d-flex mt-2 mt-md-3">
                     <snap class="c-f-h c-fs-2">Explore Our Curations</snap>
@@ -69,7 +78,7 @@
             </div>
         </div>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
