--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <div class="container align-items-center text-dark justify-content-between my-auto d-flex">
             <p class=" c-fs-4  d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle
             </p>
-            <div class=" d-flex gap-3 col-12 col-md-5 col-lg-4 col-xl-3 justify-content-center justify-content-md-end">
-                <button class="btn btn-sm px-2 px-md-3 py-1 py-md-2 c-btn-primary">Get Direction</button>
-                <button class="btn btn-sm px-2 px-md-3 py-1 py-md-2 c-btn-seccond">Download App</button>
+            <div class=" d-flex gap-3 col-12 col-md-6 col-lg-5 col-xl-4 justify-content-center justify-content-md-end">
+                <button class="btn btn-sm px-3 py-1 py-md-1 c-btn-primary c-fs-4    ">Get Direction</button>
+                <button class="btn btn-sm px-3 py-1 py-md-1 c-btn-seccond c-fs-4    ">Download App</button>
             </div>
         </div>
     </nav>
-    <div class="container my-3">
+    <div class="container my-5">
         <div class="d-flex w-100">
             <img class="mx-auto " src="./img/halfkg-logo.svg" alt="halfkg-logo-logo">
         </div>
@@ -46,10 +46,10 @@
                 <p class="c-fs-3 mt-2 mt-md-5">Buy with expert research,<br>not with impulse.</p>
                 <div class="d-flex justify-content-center justify-content-sm-start gap-3 gap-md-4  mt-1 mt-md-3">
                     <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg" class="app-store-btn">
-                        <div class="bg-white w-100  c-fs-1 px-3 px-md-3 py-2 rounded  d-flex">
+                        <div class="bg-white w-100  c-fs-1 px-3 px-md-3 py-2 rounded justify-content-center d-flex">
                             <img class="app-store-logo " src="./img/playstore-logo.svg">
                             <div flex-column
-                                class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
+                                class="ms-1  c-text-col-two h-100 d-flex flex-column justify-content-between">
                                 <p class="c-fs-5 c-f-b text-uppercase ">Get it on </p>
                                 <p class="c-fs-4 c-f-b-b ">Google Play</p>
 
@@ -58,17 +58,17 @@
                     </a>
                             <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg"
                                 class="app-store-btn">
-                                <div class="bg-white w-100 c-fs-1 px-3 px-md-3 py-2 rounded  d-flex">
+                                <div class="bg-white w-100 c-fs-1 px-3 px-md-3 py-2 rounded  justify-content-center d-flex">
                                     <img class="app-store-logo " src="./img/appstore-ico.svg">
                                     <div flex-column
-                                        class="ms-2 c-text-col-two h-100 d-flex flex-column justify-content-between">
+                                        class="ms-1 c-text-col-two h-100 d-flex flex-column justify-content-between">
                                         <p class="c-fs-5 c-f-b text-uppercase">Download on the</p>
                                         <p class="c-fs-4 c-f-b-b">App Store</p>
                                     </div>
                                 </div>
                             </a>
                 </div>
-                <div class="w-100 d-flex mt-2 mt-md-3">
+                <div class="w-100 d-flex mt-2 mt-md-5">
                     <snap class="c-f-h c-fs-2">Explore Our Curations</snap>
                     <img class="col-4 d-none d-md-block" src="./img/arrow-img.png">
                 </div>
