--- a/index.html
+++ b/index.html
@@ -19,32 +19,38 @@
         <div class="container align-items-center text-dark justify-content-between my-auto d-flex">
             <p class=" c-fs-4  d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle
             </p>
-            <div class=" d-flex gap-3 col-12 col-md-6 col-lg-5 col-xl-4 justify-content-center justify-content-md-end">
-                <button class="btn btn-sm px-3 py-1 py-md-1 c-btn-primary c-fs-4    ">Get Direction</button>
-                <button class="btn btn-sm px-3 py-1 py-md-1 c-btn-seccond c-fs-4    ">Download App</button>
+            <div class=" d-flex gap-3 col-12 col-md-6 col-lg-5 col-xl-4 justify-content-between justify-content-md-end">
+                <button class="c-btn btn c-btn-primary c-fs-6  py-1 px-3  ">Get Direction</button>
+                <button class="c-btn btn c-btn-seccond c-fs-6  py-1 px-3  ">Download App</button>
             </div>
         </div>
     </nav>
-    <div class="container my-5">
-        <div class="d-flex w-100">
-            <img class="mx-auto " src="./img/halfkg-logo.svg" alt="halfkg-logo-logo">
+    <div class="container px-4 px-md-0">
+        <div class="d-flex w-100 my-4 my-md-4 my-lg-5">
+            <img class="mx-auto halfkg-logo" src="./img/halfkg-logo.svg" alt="halfkg-logo">
         </div>
 
-        <div class="d-flex mt-4">
+        <div class="d-flex ">
 
-            <div class="col-12 col-lg-7 d-flex flex-column gap-3">
+            <div class="col-12 col-lg-7 d-flex flex-column ">
                 <div class="col-12 c-fs-4 c-f-b c-text-col-one">
                     <span>BEST</span>
-                    <span><img class="text-emoji" src="./img/grass.svg"></span>
+                    <span>🌾</span>
+                    <span>🥗</span>
+                    <SPAN> AND LOWEST</SPAN>
+                    <SPAN>💰</SPAN>
+                    <SPAN>🥳</SPAN>
+
+                    <!-- <span><img class="text-emoji" src="./img/grass.svg"></span>
                     <span><img class="text-emoji" src="./img/salad.svg"></span>
                     <SPAN> AND LOWEST</SPAN>
                     <span><img class="text-emoji" src="./img/money.svg"></span>
-                    <span><img class="text-emoji" src="./img/happy.svg"></span>
+                    <span><img class="text-emoji" src="./img/happy.svg"></span> -->
                 </div>
                 <h1 class="col-12 c-fs-1 c-text-col-one c-f-h mt-1">Give the premium fuel to your body, for extra
                     mileage. </h1>
-                <p class="c-fs-3 mt-2 mt-md-5">Buy with expert research,<br>not with impulse.</p>
-                <div class="d-flex justify-content-center justify-content-sm-start gap-3 gap-md-4  mt-1 mt-md-3">
+                <p class="c-fs-3 mt-2 pt-4 mt-md-5">Buy with expert research,<br>not with impulse.</p>
+                <div class="d-flex justify-content-center justify-content-sm-start gap-2 gap-md-3  mt-2 mt-md-4">
                     <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg" class="app-store-btn">
                         <div class="bg-white w-100  c-fs-1 px-3 px-md-3 py-2 rounded justify-content-center d-flex">
                             <img class="app-store-logo " src="./img/playstore-logo.svg">
@@ -68,7 +74,7 @@
                                 </div>
                             </a>
                 </div>
-                <div class="w-100 d-flex mt-2 mt-md-5">
+                <div class="w-100 d-flex mt-5 pt-2 pt-md-4">
                     <snap class="c-f-h c-fs-2">Explore Our Curations</snap>
                     <img class="col-4 d-none d-md-block" src="./img/arrow-img.png">
                 </div>
