--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
 <body>
     <nav class="c-navbar sticky-top d-flex">
-        <div class="container align-items-center text-dark justify-content-between my-auto d-flex">
+        <div class=" px-4 px-md-0 container align-items-center text-dark justify-content-between my-auto d-flex">
             <p class=" c-fs-4  d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle
             </p>
             <div class=" d-flex gap-3 col-12 col-md-6 col-lg-5 col-xl-4 justify-content-between justify-content-md-end">
-                <button class="c-btn btn c-btn-primary c-fs-6  py-1 px-3  ">Get Direction</button>
-                <button class="c-btn btn c-btn-seccond c-fs-6  py-1 px-3  ">Download App</button>
+                <button class="c-btn btn c-btn-primary c-fs-6  py-2 px-3 px-sm-4  ">Get Direction</button>
+                <button class="c-btn btn c-btn-seccond c-fs-6  py-2 px-3 px-sm-4  ">Download App</button>
             </div>
         </div>
     </nav>
     <div class="container px-4 px-md-0">
-        <div class="d-flex w-100 my-4 my-md-4 my-lg-5">
+        <div class="d-flex w-100 my-5">
             <img class="mx-auto halfkg-logo" src="./img/halfkg-logo.svg" alt="halfkg-logo">
         </div>
 
@@ -52,7 +52,7 @@
                 <p class="c-fs-3 mt-2 pt-4 mt-md-5">Buy with expert research,<br>not with impulse.</p>
                 <div class="d-flex justify-content-center justify-content-sm-start gap-2 gap-md-3  mt-2 mt-md-4">
                     <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg" class="app-store-btn">
-                        <div class="bg-white w-100  c-fs-1 px-3 px-md-3 py-2 rounded justify-content-center d-flex">
+                        <div class="bg-white w-100  c-fs-1 px-3 px-md-3 py-1 py-sm-2 rounded justify-content-center d-flex">
                             <img class="app-store-logo " src="./img/playstore-logo.svg">
                             <div flex-column
                                 class="ms-1  c-text-col-two h-100 d-flex flex-column justify-content-between">
@@ -64,7 +64,7 @@
                     </a>
                             <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg"
                                 class="app-store-btn">
-                                <div class="bg-white w-100 c-fs-1 px-3 px-md-3 py-2 rounded  justify-content-center d-flex">
+                                <div class="bg-white w-100 c-fs-1 px-3 px-md-3 py-1 py-sm-2 rounded  justify-content-center d-flex">
                                     <img class="app-store-logo " src="./img/appstore-ico.svg">
                                     <div flex-column
                                         class="ms-1 c-text-col-two h-100 d-flex flex-column justify-content-between">
