--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HalfKg</title>
+    <title>HalfKg.store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="./img/fav.svg">
@@ -25,59 +25,60 @@
             </div>
         </div>
     </nav>
-    <div class="container px-4 px-md-0">
-        <div class="d-flex w-100 my-5">
-            <img class="mx-auto halfkg-logo" src="./img/halfkg-logo.svg" alt="halfkg-logo">
-        </div>
+    <a href="https://wa.me/+917024100855" target="_blank">
+        <img src="./img/chat-w.svg" class="chat-w d-none d-lg-block">
+        <a href="https://wa.me/+917024100855" target="_blank">
+    <img src="./img/chat-sm.svg" class="d-blovk d-lg-none chat-w"></a>
+    <div class="d-flex">
+        <img class="halfkg-logo mx-auto" src="./img/halfkg-logo.svg" alt="Halfkg">
+    </div>
+    <div class="container hero-sec d-flex justify-content-between px-4">
+        <div class="w-100 h-auto d-flex flex-column justify-content-start justify-content-md-center">
+            <div>
+                <span>BEST</span>
+                <span>🌾</span>
+                <span>🥗</span>
+                <SPAN> AND LOWEST</SPAN>
+                <SPAN>💰</SPAN>
+                <SPAN>🥳</SPAN>
+            </div>
+            <h1 class=" c-fs-1 c-text-col-one c-f-h-b mt-1">Give the premium fuel to your body,<br> for extra mileage. </h1>
+            <p class="c-fs-3 c-text-col-one c-f-b mt-5 pt-4 ">Buy with expert research,<br>not with impulse.</p>
+            <div class="d-flex justify-content-center justify-content-sm-start gap-2 gap-md-3  mt-2 mt-md-2">
+                <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg" class="app-store-btn">
+                    <div class="bg-white w-100  c-fs-1 px-3 px-md-3 py-1 py-sm-2 rounded justify-content-center d-flex">
+                        <img class="app-store-logo " src="./img/playstore-logo.svg">
+                        <div flex-column
+                            class="ms-1  c-text-col-two h-100 d-flex flex-column justify-content-between">
+                            <p class="c-fs-5 c-f-b text-uppercase ">Get it on </p>
+                            <p class="c-fs-4 c-f-b-b ">Google Play</p>
 
-        <div class="d-flex ">
-
-            <div class="col-12 col-lg-7 d-flex flex-column ">
-                <div class="col-12 c-fs-4 c-f-b c-text-col-one">
-                    <span>BEST</span>
-                    <span>🌾</span>
-                    <span>🥗</span>
-                    <SPAN> AND LOWEST</SPAN>
-                    <SPAN>💰</SPAN>
-                    <SPAN>🥳</SPAN>
-                </div>
-                <h1 class="col-12 c-fs-1 c-text-col-one c-f-h mt-1">Give the premium fuel to your body, for extra
-                    mileage. </h1>
-                <p class="c-fs-3 mt-2 pt-4 mt-md-5">Buy with expert research,<br>not with impulse.</p>
-                <div class="d-flex justify-content-center justify-content-sm-start gap-2 gap-md-3  mt-2 mt-md-4">
-                    <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg" class="app-store-btn">
-                        <div class="bg-white w-100  c-fs-1 px-3 px-md-3 py-1 py-sm-2 rounded justify-content-center d-flex">
-                            <img class="app-store-logo " src="./img/playstore-logo.svg">
-                            <div flex-column
-                                class="ms-1  c-text-col-two h-100 d-flex flex-column justify-content-between">
-                                <p class="c-fs-5 c-f-b text-uppercase ">Get it on </p>
-                                <p class="c-fs-4 c-f-b-b ">Google Play</p>
-
-                            </div>
                         </div>
-                    </a>
-                            <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg"
-                                class="app-store-btn">
-                                <div class="bg-white w-100 c-fs-1 px-3 px-md-3 py-1 py-sm-2 rounded  justify-content-center d-flex">
-                                    <img class="app-store-logo " src="./img/appstore-ico.svg">
-                                    <div flex-column
-                                        class="ms-1 c-text-col-two h-100 d-flex flex-column justify-content-between">
-                                        <p class="c-fs-5 c-f-b text-uppercase">Download on the</p>
-                                        <p class="c-fs-4 c-f-b-b">App Store</p>
-                                    </div>
+                    </div>
+                </a>
+                        <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg"
+                            class="app-store-btn">
+                            <div class="bg-white w-100 c-fs-1 px-3 px-md-3 py-1 py-sm-2 rounded  justify-content-center d-flex">
+                                <img class="app-store-logo " src="./img/appstore-ico.svg">
+                                <div flex-column
+                                    class="ms-1 c-text-col-two h-100 d-flex flex-column justify-content-between">
+                                    <p class="c-fs-5 c-f-b text-uppercase">Download on the</p>
+                                    <p class="c-fs-4 c-f-b-b">App Store</p>
                                 </div>
-                            </a>
-                </div>
-                <div class="w-100 d-flex mt-5 pt-2 pt-md-4">
-                    <snap class="c-f-h c-fs-2">Explore Our Curations</snap>
-                    <img class="col-4 d-none d-md-block" src="./img/arrow-img.png">
-                </div>
+                            </div>
+                        </a>
             </div>
-            <div class="d-none d-lg-flex  ms-auto">
-                <img src="./img/qr-code.svg" alt="harf kg">
-            </div>
+
+        </div>
+        <div class="d-none d-lg-flex ms-auto">
+            <img class="qr-code" src="./img/qr-code.svg" alt="Halfkg qr">
         </div>
     </div>
+    <div class="container d-flex px-4">
+        <h3>Explore Our Curations</h3>
+        <img class="col-2 d-none d-md-block" src="./img/arrow-img.png" alt="">
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
