responsive mod at 320p

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
             <p class=" c-fs-4  d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle
             </p>
             <div class=" d-flex gap-3 col-12 col-md-6 col-lg-5 col-xl-4 justify-content-between justify-content-md-end">
+                <a href="https://goo.gl/maps/MGG2znqEbQMihnoT7" target="_blank">
                 <button class="c-btn btn c-btn-primary c-fs-6  py-2 px-3 px-sm-4  ">Get Direction</button>
+                </a>
+                <a href="https://app.halfkg.store" target="_blank">
                 <button class="c-btn btn c-btn-seccond c-fs-6  py-2 px-3 px-sm-4  ">Download App</button>
+                </a>
             </div>
         </div>
     </nav>
@@ -43,7 +47,7 @@
                 <SPAN>🥳</SPAN>
             </div>
             <h1 class=" c-fs-1 c-text-col-one c-f-h-b mt-1">Give the premium fuel to your body,<br> for extra mileage. </h1>
-            <p class="c-fs-3 c-text-col-one c-f-b mt-5 pt-4 ">Buy with expert research,<br>not with impulse.</p>
+            <p class="c-fs-3 c-text-col-one c-f-b mt-4 mt-md-5 pt-2 pt-md-3 pt-md-4 ">Buy with expert research,<br>not with impulse.</p>
             <div class="d-flex justify-content-center justify-content-sm-start gap-2 gap-md-3  mt-2 mt-md-2">
                 <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg" class="app-store-btn">
                     <div class="bg-white w-100  c-fs-1 px-3 px-md-3 py-1 py-sm-2 rounded justify-content-center d-flex">
