--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HalfKg.store</title>
+    <title>Halfkg - Organic, Healthy, and Eco-Friendly Groceries</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="./img/fav.svg">
@@ -15,11 +15,11 @@
 </head>
 
 <body>
-    <nav class="c-navbar sticky-top d-flex">
-        <div class=" px-4 px-md-0 container align-items-center text-dark justify-content-between my-auto d-flex">
+    <nav class="c-navbar d-flex">
+        <div class=" px-4 px-md-0 container align-items-center text-dark justify-content-start my-auto d-flex">
             <p class=" c-fs-4  d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle
             </p>
-            <div class=" d-flex gap-3 col-12 col-md-6 col-lg-5 col-xl-4 justify-content-between justify-content-md-end">
+            <div class=" d-flex gap-3 ms-4">
                 <a href="https://goo.gl/maps/MGG2znqEbQMihnoT7" target="_blank">
                 <button class="c-btn btn c-btn-primary c-fs-6  py-2 px-3 px-sm-4  ">Get Direction</button>
                 </a>
