--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav class="c-navbar d-flex">
-        <div class=" px-4 px-md-0 container align-items-center text-dark justify-content-start my-auto d-flex">
+        <div class=" px-4 px-md-0 container align-items-center text-dark justify-content-center my-auto d-flex">
             <p class=" c-fs-4  d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle
             </p>
             <div class=" d-flex gap-3 ms-4">
