--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <body>
     <nav class="c-navbar d-flex">
-        <div class=" px-2 px-md-0 container align-items-center text-dark justify-content-center my-auto d-flex">
-            <p class=" c-fs-4  d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle
+        <div class=" px-1 px-md-0 container align-items-center text-dark justify-content-center my-auto d-flex">
+            <p class=" c-fs-4 d-md-block d-none">Join 1000+ families on the journey of healthy & Eco-friendly lifestyle
             </p>
-            <div class=" d-flex gap-3 ms-4 ">
+            <div class=" d-flex gap-3  justify-content-center col-12 col-sm-7 col-md-6 col-lg-6 col-xl-5">
                 <a href="https://goo.gl/maps/MGG2znqEbQMihnoT7" target="_blank">
                 <button class="c-btn btn c-btn-primary c-fs-6  py-2 px-3 px-sm-4  text-uppercase">Get Direction</button>
                 </a>
