--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
             </p>
             <div class=" d-flex gap-3  justify-content-center col-12 col-sm-7 col-md-6 col-lg-6 col-xl-5">
                 <a href="https://goo.gl/maps/MGG2znqEbQMihnoT7" target="_blank">
-                <button class="c-btn btn c-btn-primary c-fs-6  py-2 px-3 px-sm-4  text-uppercase">Get Direction</button>
+                    <button class="c-btn btn c-btn-primary c-fs-6  py-2 px-3 px-sm-4  text-uppercase">Get
+                        Direction</button>
                 </a>
                 <a href="https://app.halfkg.store" target="_blank">
-                <button class="c-btn btn c-btn-seccond c-fs-6  py-2 px-3 px-sm-4  text-uppercase">Download App</button>
+                    <button class="c-btn btn c-btn-seccond c-fs-6  py-2 px-3 px-sm-4  text-uppercase">Download
+                        App</button>
                 </a>
             </div>
         </div>
@@ -32,61 +34,135 @@
     <a href="https://wa.me/+917024100855" target="_blank">
         <img src="./img/chat-w.svg" class="chat-w d-none d-lg-block">
         <a href="https://wa.me/+917024100855" target="_blank">
-    <img src="./img/chat-sm.svg" class="d-blovk d-lg-none chat-w"></a>
-    <div class="d-flex">
-        <img class="halfkg-logo mx-auto" src="./img/halfkg-logo.svg" alt="Halfkg">
-    </div>
-    <div class="container hero-sec d-flex justify-content-between px-4">
-        <div class="w-100 h-auto d-flex flex-column justify-content-start justify-content-md-center">
-            <div>
-                <span>BEST</span>
-                <span>🌾</span>
-                <span>🥗</span>
-                <SPAN> AND LOWEST</SPAN>
-                <SPAN>💰</SPAN>
-                <SPAN>🥳</SPAN>
-            </div>
-            <h1 class=" c-fs-1 c-text-col-one c-f-h-b mt-1">Give the premium fuel to your body,<br> for extra mileage. </h1>
-            <p class="c-fs-3 c-text-col-one c-f-b mt-4 mt-md-5 pt-2 pt-md-3 pt-md-4 ">Buy with expert research,<br>not with impulse.</p>
-            <div class="d-flex justify-content-center justify-content-sm-start gap-2 gap-md-3  mt-2 mt-md-2">
-                <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg" class="app-store-btn">
-                    <div class="bg-white w-100  c-fs-1 px-3 px-md-3 py-1 py-sm-2 rounded justify-content-center d-flex">
-                        <img class="app-store-logo " src="./img/playstore-logo.svg">
-                        <div flex-column
-                            class="ms-1  c-text-col-two h-100 d-flex flex-column justify-content-between">
-                            <p class="c-fs-5 c-f-b text-uppercase ">Get it on </p>
-                            <p class="c-fs-4 c-f-b-b ">Google Play</p>
+            <img src="./img/chat-sm.svg" class="d-blovk d-lg-none chat-w"></a>
+        <div class="d-flex">
+            <img class="halfkg-logo mx-auto" src="./img/halfkg-logo.svg" alt="Halfkg">
+        </div>
+        <div class="container hero-sec d-flex justify-content-between px-4">
+            <div class="w-100 h-auto d-flex flex-column justify-content-start justify-content-md-center">
+                <div>
+                    <span>BEST</span>
+                    <span>🌾</span>
+                    <span>🥗</span>
+                    <SPAN> AND LOWEST</SPAN>
+                    <SPAN>💰</SPAN>
+                    <SPAN>🥳</SPAN>
+                </div>
+                <h1 class=" c-fs-1 c-text-col-one c-f-h-b mt-1">Give the premium fuel to your body,<br> for extra
+                    mileage. </h1>
+                <p class="c-fs-3 c-text-col-one c-f-b mt-4 mt-md-5 pt-2 pt-md-3 pt-md-4 ">Buy with expert
+                    research,<br>not with impulse.</p>
+                <div class="d-flex justify-content-center justify-content-sm-start gap-2 gap-md-3  mt-2 mt-md-2">
+                    <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg" class="app-store-btn">
+                        <div
+                            class="bg-white w-100  c-fs-1 px-3 px-md-3 py-1 py-sm-2 rounded justify-content-center d-flex">
+                            <img class="app-store-logo " src="./img/playstore-logo.svg">
+                            <div flex-column
+                                class="ms-1  c-text-col-two h-100 d-flex flex-column justify-content-between">
+                                <p class="c-fs-5 c-f-b text-uppercase ">Get it on </p>
+                                <p class="c-fs-4 c-f-b-b ">Google Play</p>
 
+                            </div>
+                        </div>
+                    </a>
+                    <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg" class="app-store-btn">
+                        <div
+                            class="bg-white w-100 c-fs-1 px-3 px-md-3 py-1 py-sm-2 rounded  justify-content-center d-flex">
+                            <img class="app-store-logo " src="./img/appstore-ico.svg">
+                            <div flex-column
+                                class="ms-1 c-text-col-two h-100 d-flex flex-column justify-content-between">
+                                <p class="c-fs-5 c-f-b text-uppercase">Download on the</p>
+                                <p class="c-fs-4 c-f-b-b">App Store</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+            </div>
+            <div class="d-none d-lg-flex ms-auto">
+                <img class="qr-code" src="./img/qr-code.svg" alt="Halfkg qr">
+            </div>
+        </div>
+        <div class="container d-flex px-4">
+            <h3>Explore Our Curations</h3>
+            <img class="col-2 d-none d-md-block" src="./img/arrow-img.png" alt="">
+        </div>
+        <div class="container px-4 py-4">
+            <h3 class="c-fs-3 mb-5">
+                Shop by Categories
+            </h3>
+            <div class="d-flex gap-sm-4 gap-md-5 gap-3 justify-content-between justify-content-sm-start flex-wrap">
+                <a href="/">
+                    <div class="d-flex gap-3 px-4 c-cat-bg rounded justify-content-start align-items-center">
+                        <img src="/img//catico.svg" class="cat-ico">
+                        <div>
+                            <p class="">Baby Food</p>
                         </div>
                     </div>
                 </a>
-                        <a href="https://play.google.com/store/apps/details?id=com.walkover.halfkg"
-                            class="app-store-btn">
-                            <div class="bg-white w-100 c-fs-1 px-3 px-md-3 py-1 py-sm-2 rounded  justify-content-center d-flex">
-                                <img class="app-store-logo " src="./img/appstore-ico.svg">
-                                <div flex-column
-                                    class="ms-1 c-text-col-two h-100 d-flex flex-column justify-content-between">
-                                    <p class="c-fs-5 c-f-b text-uppercase">Download on the</p>
-                                    <p class="c-fs-4 c-f-b-b">App Store</p>
-                                </div>
-                            </div>
-                        </a>
+                <a href="/">
+                    <div class="d-flex gap-3 px-4 c-cat-bg rounded justify-content-start align-items-center">
+                        <img src="/img//catico.svg" class="cat-ico">
+                        <div>
+                            <p class="">Baby Food</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="/">
+                    <div class="d-flex gap-3 px-4 c-cat-bg rounded justify-content-start align-items-center">
+                        <img src="/img//catico.svg" class="cat-ico">
+                        <div>
+                            <p class="">Baby Food</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="/">
+                    <div class="d-flex gap-3 px-4 c-cat-bg rounded justify-content-start align-items-center">
+                        <img src="/img//catico.svg" class="cat-ico">
+                        <div>
+                            <p class="">Baby Food</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="/">
+                    <div class="d-flex gap-3 px-4 c-cat-bg rounded justify-content-start align-items-center">
+                        <img src="/img//catico.svg" class="cat-ico">
+                        <div>
+                            <p class="">Baby Food</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="/">
+                    <div class="d-flex gap-3 px-4 c-cat-bg rounded justify-content-start align-items-center">
+                        <img src="/img//catico.svg" class="cat-ico">
+                        <div>
+                            <p class="">Baby Food</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="/">
+                    <div class="d-flex gap-3 px-4 c-cat-bg rounded justify-content-start align-items-center">
+                        <img src="/img//catico.svg" class="cat-ico">
+                        <div>
+                            <p class="">Baby Food</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="/">
+                    <div class="d-flex gap-3 px-4 c-cat-bg rounded justify-content-start align-items-center">
+                        <img src="/img//catico.svg" class="cat-ico">
+                        <div>
+                            <p class="">Baby Food</p>
+                        </div>
+                    </div>
+                </a>
             </div>
-
         </div>
-        <div class="d-none d-lg-flex ms-auto">
-            <img class="qr-code" src="./img/qr-code.svg" alt="Halfkg qr">
-        </div>
-    </div>
-    <div class="container d-flex px-4">
-        <h3>Explore Our Curations</h3>
-        <img class="col-2 d-none d-md-block" src="./img/arrow-img.png" alt="">
-    </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
