--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <a href="https://wa.me/+917024100855" target="_blank">
         <img src="./img/chat-w.svg" class="chat-w d-none d-lg-block">
         <a href="https://wa.me/+917024100855" target="_blank">
-            <img src="./img/chat-sm.svg" class="d-blovk d-lg-none chat-w"></a>
+            <img src="./img/chat-sm.svg" class="d-block d-lg-none chat-w" style="
+            height: 60px;
+        "></a>
         <div class="d-flex">
             <img class="halfkg-logo mx-auto" src="./img/halfkg-logo.svg" alt="Halfkg">
         </div>
@@ -85,7 +87,7 @@
                 <img class="qr-code" src="./img/qr-code.svg" alt="Halfkg qr">
             </div>
         </div>
-        <div class="container d-flex px-4">
+        <div class="container d-flex px-4 justify-content-sm-center">
             <h3>Explore Our Curations</h3>
             <img class="col-2 d-none d-md-block" src="./img/arrow-img.png" alt="">
         </div>
@@ -93,7 +95,7 @@
             <h3 class="c-fs-3 mb-5">
                 Shop by Categories
             </h3>
-            <div class="d-flex gap-sm-4 gap-md-5 gap-3 justify-content-between justify-content-sm-start flex-wrap">
+            <div class="d-flex gap-sm-4 gap-md-5 gap-3 justify-content-center flex-wrap">
                 <a href="/babyfood.html">
                     <div class="d-flex gap-3 px-4 c-cat-bg rounded justify-content-start align-items-center">
                         <img src="/img//catico.svg" class="cat-ico">
@@ -102,14 +104,14 @@
                         </div>
                     </div>
                 </a>
-                <!-- <a href="/bathessentials.html">
+                <a href="/bathessentials.html">
                     <div class="d-flex gap-3 px-4 c-cat-bg rounded justify-content-start align-items-center">
                         <img src="/img//catico.svg" class="cat-ico">
                         <div>
                             <p class="">Bath Essentials</p>
                         </div>
                     </div>
-                </a> -->
+                </a>
                 <a href="/cerealsandbreakfast.html">
                     <div class="d-flex gap-3 px-4 c-cat-bg rounded justify-content-start align-items-center">
                         <img src="/img//catico.svg" class="cat-ico">
@@ -283,6 +285,14 @@
                         <img src="/img//catico.svg" class="cat-ico">
                         <div>
                             <p class="">Oral Care</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="/pastaandnoodles.html">
+                    <div class="d-flex gap-3 px-4 c-cat-bg rounded justify-content-start align-items-center">
+                        <img src="/img//catico.svg" class="cat-ico">
+                        <div>
+                            <p class="">Pasta and Chutneys</p>
                         </div>
                     </div>
                 </a>
