added padding and gaping

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                 <img class="qr-code" src="./img/qr-code.svg" alt="Halfkg qr">
             </div>
         </div>
-        <div class="container d-flex px-4 justify-content-sm-center">
+        <div class="container d-flex px-4 mt-2">
             <h3>Explore Our Curations</h3>
             <img class="col-2 d-none d-md-block" src="./img/arrow-img.png" alt="">
         </div>
         <div class="container px-4 py-4">
-            <h3 class="c-fs-3 mb-5">
+            <h3 class="c-fs-3 mb-5 ms-5">
                 Shop by Categories
             </h3>
             <div class="d-flex gap-sm-4 gap-md-5 gap-3 justify-content-center flex-wrap">
@@ -458,10 +458,10 @@
                             </div>
                         </div> -->
                     <div class="footer-social-a-content col-6 col-lg-12 mt-lg-5">
-                        <span class="footer-social-a-text c-fs-5 d-flex flex-column" style="margin-right: 90px ;">
+                        <span class="footer-social-a-text c-fs-7 d-flex flex-column" style="margin-right: 67px ;">
                             Follow Us
                         </span>
-                        <div class="footer-social-a d-flex mt-3 align-items-center justify-content-start justify-content-lg-end"
+                        <div class="footer-social-a d-flex mt-2 align-items-center justify-content-start justify-content-lg-end"
                             style="margin-right: 28px
                                 ;">
                             <a href="https://www.facebook.com/halfkg.store/" target="_blank" class="me-4">
