--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     <div class="d-flex gap-3 px-4 c-cat-bg rounded justify-content-start align-items-center">
                         <img src="/img//catico.svg" class="cat-ico">
                         <div>
-                            <p class="">salts</p>
+                            <p class="">Salts</p>
                         </div>
                     </div>
                 </a>
@@ -462,13 +462,13 @@
                             Follow Us
                         </span>
                         <div class="footer-social-a d-flex mt-2 align-items-center justify-content-start justify-content-lg-end"
-                            style="margin-right: 28px
+                            style="margin-right: 50px
                                 ;">
                             <a href="https://www.facebook.com/halfkg.store/" target="_blank" class="me-4">
                                 <img src="img/facebook.svg" width={24} height={24} alt="#" />
                             </a>
-                            <a href="https://www.linkedin.com/company/msg91/" target="_blank" class="me-4">
-                                <img src="../img/linkedin.svg" width={24} height={24} alt="#" />
+                            <!-- <a href="https://www.linkedin.com/company/msg91/" target="_blank" class="me-4">
+                                <img src="../img/linkedin.svg" width={24} height={24} alt="#" /> -->
                             </a>
                             <a href="https://twitter.com/halfkg" target="_blank" class="me-4">
                                 <img src="../img/twitter.svg" width={24} height={24} alt="#" />
