--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
             </div>
         </div>
         <div class="footer-bg col-12">
-        <div class="container  py-4 d-flex justify-content-between">
-            <div class="d-flex gap-3">
+        <div class=" flex-wrap container  py-4 gap-3 d-flex justify-content-between">
+            <div class="flex-wrap d-flex gap-3">
                 <a class="f-link" href="#"> About Us</a>
                 <span>|</span>
                 <a class="f-link" href="#">Contact Us</a>
